# Edge_Based_Visual_Odometry

./: .gitignore  CMakeLists.txt  README.md  euroc_mh_01.yaml  euroc_v1_01.yaml
cmd/: CMakeLists.txt  main_VO.cpp
config/: eth3d_delivery_area.yaml  euroc_v1_01.yaml  tum.yaml
include/: Dataset.h  Frame.h  MotionTracker.h  Pipeline.h  definitions.h  utility.h
include/toed/: cpu_toed.hpp  indices.hpp
output_files/: data_final_output_cpu.txt  right_candidate_edges.txt
src/: CMakeLists.txt  Dataset.cpp  Frame.cpp  MotionTracker.cpp  Pipeline.cpp  utility.cpp
src/toed/: cpu_toed.cpp
test/: test_functions.cpp
